--- a/forumhome.html
+++ b/forumhome.html
@@ -9,7 +9,7 @@
     <title>Jumbotron Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="./assets/css/main.css" rel="stylesheet">
@@ -160,7 +160,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="./assets/js/bootstrap.min.js"></script>
+<script src="./assets/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="./assets/js/main.js"></script>
 
 
